--- a/suppliers.html
+++ b/suppliers.html
@@ -17,12 +17,12 @@
             <li><a href="#" class="disabled"><i class="fas fa-industry"></i> Proizvodnja</a></li>
             <li><a href="#" class="disabled"><i class="fas fa-file-invoice-dollar"></i> Naročila & Finance</a></li>
             <li><a href="#" class="disabled"><i class="fas fa-shopping-cart"></i> Nabava</a></li>
-            <li><a href="index.html"><i class="fas fa-user"></i> Uporabniki</a></li>         
+            <li><a href="users.html"><i class="fas fa-user"></i> Uporabniki</a></li>         
             
         </ul>
         <ul class="bottom-links">
             <li><a href="settings.html"><i class="fas fa-cog"></i> Nastavitve</a></li>
-            <li><a href="login.html"><i class="fas fa-sign-out-alt"></i> Odjava</a></li>
+            <li><a href="index.html"><i class="fas fa-sign-out-alt"></i> Odjava</a></li>
         </ul>
     </div>
     
