Added back buttons and some minor fixes

--- a/comparisons.html
+++ b/comparisons.html
@@ -27,10 +27,11 @@
         </ul>
     </div>
 
-    <div class="content">
+    <div class="content" style=" position:relative;">
+        <button class="details-button" onclick="window.location.href='suppliers.html'" style="position: absolute; top: 30px; left: 30px;">Nazaj</button>
         <div class="cards-wrapper" style="display: flex; gap: 20px; justify-content: center;">
             <div class="card">
-                <h3>Dobavitelj B</h3>
+                <h3>Dobavitelj C</h3>
                 <p>Pravočasnost: 80% </span></p>
                 <p>Stroški: 1500 €</p>
                 <p>Kakovost: 4</p>
@@ -48,7 +49,7 @@
             </div>
     
             <div class="card">
-                <h3>Dobavitelj F</h3>
+                <h3>Dobavitelj A</h3>
                 <p>Pravočasnost: 90%</span></p>
                 <p>Stroški: 1800 €</p>
                 <p>Kakovost: 3</p>
