--- a/details.html
+++ b/details.html
@@ -29,8 +29,9 @@
 
 
         <div class="content">
-            <div class="header">
-                <h2 id="supplier-name" style="margin-bottom: 10px;">Dobavitelj A <span class="status green"></span></h2>
+            <div class="header" style="display: flex; justify-content: center; align-items: center; position: relative; margin-bottom: 10px;">
+                <button class="details-button" onclick="window.location.href='suppliers.html'" style="position: absolute; left: 0;">Nazaj</button>
+                <h2 id="supplier-name" style="margin: 0;">Dobavitelj A <span class="status green"></span></h2>
             </div>
 
             <div class="tabs">
