--- a/permissions.html
+++ b/permissions.html
@@ -28,10 +28,12 @@
         </ul>
     </div>
 
-    <div class="content" style="padding: 10%;">
+    <div class="content" style="padding: 10%; position:relative;">
+        <button class="details-button" onclick="window.location.href='users.html'" style="position: absolute; top: 30px; left: 30px;">Nazaj</button>
+
         <div class="tab-content" id="basicInfo">
             <div class="permissions-form">
-                <h1 style="text-align: left; padding-bottom: 10px;">Dodajanje pravic uporabniku Toni</h1>
+                <h1 style="text-align: left; padding-bottom: 10px;">Dodajanje pravic uporabniku</h1>
                 <form>
                     <div class="role-selection" style="padding-bottom: 20px;">
                         <label for="role-select">Izberite vlogo:</label>
