--- a/suppliers.html
+++ b/suppliers.html
@@ -37,10 +37,11 @@
             <thead>
                 <thead>
                     <tr>
-                        <th onclick="sortTable(0)">Dobavitelj</th>
-                        <th onclick="sortTable(1)">Pravočasnost (%)</th>
-                        <th onclick="sortTable(2)">Stroški</th>
-                        <th onclick="sortTable(3)">Kakovost</th>
+                        <th style="width: 10px;"></th> 
+                        <th onclick="sortTable(1)">Dobavitelj</th>
+                        <th onclick="sortTable(2)">Pravočasnost (%)</th>
+                        <th onclick="sortTable(3)">Stroški</th>
+                        <th onclick="sortTable(4)">Kakovost</th>
                         <th>Status sodelovanja</th>
                         <th></th> 
                     </tr>
@@ -48,7 +49,8 @@
             </thead>
             <tbody>
                 <tr data-supplier="Dobavitelj A">
-                    <td><input type="checkbox" class="supplier-checkbox"> Dobavitelj A</td>
+                    <td><input type="checkbox" class="supplier-checkbox"></td>
+                    <td> Dobavitelj A</td>
                     <td>95</td>
                     <td>1500 <span class="green">+2%</span></td>
                     <td>5</td>
@@ -56,7 +58,8 @@
                     <td><button class="details-button">Podrobnosti</button></td>
                 </tr>
                 <tr data-supplier="Dobavitelj B">
-                    <td><input type="checkbox" class="supplier-checkbox"> Dobavitelj B</td>
+                    <td><input type="checkbox" class="supplier-checkbox"></td>
+                    <td>Dobavitelj B</td>
                     <td>87</td>
                     <td>600 <span class="green">+4%</span></td>
                     <td>2</td>
@@ -64,7 +67,8 @@
                     <td><button class="details-button">Podrobnosti</button></td>
                 </tr>
                 <tr data-supplier="Dobavitelj C">
-                    <td><input type="checkbox" class="supplier-checkbox"> Dobavitelj C</td>
+                    <td><input type="checkbox" class="supplier-checkbox"></td>
+                    <td>Dobavitelj C</td>
                     <td>78</td>
                     <td>1200 <span class="red">-1%</span></td>
                     <td>3</td>
@@ -72,7 +76,8 @@
                     <td><button class="details-button">Podrobnosti</button></td>
                 </tr>
                 <tr data-supplier="Dobavitelj D">
-                    <td><input type="checkbox" class="supplier-checkbox"> Dobavitelj D</td>
+                    <td><input type="checkbox" class="supplier-checkbox"></td>
+                    <td>Dobavitelj D</td>
                     <td>90</td>
                     <td>1800 <span class="green">+5%</span></td>
                     <td>4</td>
@@ -80,7 +85,8 @@
                     <td><button class="details-button">Podrobnosti</button></td>
                 </tr>
                 <tr data-supplier="Dobavitelj E">
-                    <td><input type="checkbox" class="supplier-checkbox"> Dobavitelj E</td>
+                    <td><input type="checkbox" class="supplier-checkbox"></td>
+                    <td>Dobavitelj E</td>
                     <td>85</td>
                     <td>900 <span class="green">+3%</span></td>
                     <td>2</td>
@@ -88,7 +94,8 @@
                     <td><button class="details-button">Podrobnosti</button></td>
                 </tr>
                 <tr data-supplier="Dobavitelj F">
-                    <td><input type="checkbox" class="supplier-checkbox"> Dobavitelj F</td>
+                    <td><input type="checkbox" class="supplier-checkbox"></td>
+                    <td>Dobavitelj F</td>
                     <td>92</td>
                     <td>1500 <span class="red">-2%</span></td>
                     <td>4</td>
@@ -96,7 +103,8 @@
                     <td><button class="details-button">Podrobnosti</button></td>
                 </tr>
                 <tr data-supplier="Dobavitelj G">
-                    <td><input type="checkbox" class="supplier-checkbox"> Dobavitelj G</td>
+                    <td><input type="checkbox" class="supplier-checkbox"></td>
+                    <td> Dobavitelj G</td>
                     <td>88</td>
                     <td>1000 <span class="green">+6%</span></td>
                     <td>3</td>
@@ -104,7 +112,8 @@
                     <td><button class="details-button">Podrobnosti</button></td>
                 </tr>
                 <tr data-supplier="Dobavitelj H">
-                    <td><input type="checkbox" class="supplier-checkbox"> Dobavitelj H</td>
+                    <td><input type="checkbox" class="supplier-checkbox"></td>
+                    <td> Dobavitelj H</td>
                     <td>93</td>
                     <td>800 <span class="green">+2%</span></td>
                     <td>4</td>
@@ -112,7 +121,8 @@
                     <td><button class="details-button">Podrobnosti</button></td>
                 </tr>
                 <tr data-supplier="Dobavitelj I">
-                    <td><input type="checkbox" class="supplier-checkbox"> Dobavitelj I</td>
+                    <td><input type="checkbox" class="supplier-checkbox"></td>
+                    <td> Dobavitelj I</td>
                     <td>80</td>
                     <td>1200 <span class="red">-1%</span></td>
                     <td>3</td>
@@ -120,7 +130,8 @@
                     <td><button class="details-button">Podrobnosti</button></td>
                 </tr>
                 <tr data-supplier="Dobavitelj J">
-                    <td><input type="checkbox" class="supplier-checkbox"> Dobavitelj J</td>
+                    <td><input type="checkbox" class="supplier-checkbox"></td>
+                    <td>Dobavitelj J</td>
                     <td>77</td>
                     <td>500 <span class="green">+4%</span></td>
                     <td>2</td>
